# tumbller-react-fastapi

./: CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md  x402-plan-backend.md
backend-fastapi/: .env.example  .gitignore  Dockerfile  alembic.ini  build_backend.sh  docker-compose.yml  pyproject.toml  start_backend.sh  stop_backend.sh
backend-fastapi/alembic/: env.py
backend-fastapi/alembic/versions/: 9f77a78fe015_add_user_wallet_address_and_privy_.py  e4e5c12e1e55_add_deleted_at_for_soft_delete.py  f54f7ea93b39_create_robots_table.py
backend-fastapi/app/: main.py
backend-fastapi/app/api/: deps.py
backend-fastapi/app/api/v1/: __init__.py  access.py  robot.py  robots.py
backend-fastapi/app/core/: config.py  database.py  ens.py  logging.py  x402_dynamic.py
backend-fastapi/app/models/: __init__.py  robot.py
backend-fastapi/app/schemas/: __init__.py  robot.py  session.py
backend-fastapi/app/services/: __init__.py  privy.py  robot.py  robot_wallet.py  session.py
backend-fastapi/docs/: CLAUDE.md  DEVELOPMENT.md  changelog.md
backend-fastapi/docs/agent-history/: problems-solved.md  prompts.md  session-2025-12-29.md  session-2025-12-31.md  session-context.md
backend-fastapi/docs/plans/: privy-wallet-integration-backend.md
backend-fastapi/tests/: conftest.py  test_camera.py  test_health.py  test_motor_control.py  test_robot_status.py  test_session.py
frontend-react/: .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.docker  Caddyfile.standalone  DEPLOYMENT_QUICK_START.md  DEVELOPMENT.md  Dockerfile  Dockerfile.standalone  Project_Prompt.md  README.md  (+9 more)
(+80 files in other folders)
